--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ set(PYTHON_EXECUTABLE python3.7)
 
 
 find_package(Eigen3 3.3.7 REQUIRED NO_MODULE)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 4.5 REQUIRED)
 find_package(OpenGL REQUIRED)
-find_package(pybind11 REQUIRED)
 find_package(Python 3.7 EXACT REQUIRED COMPONENTS Interpreter Development)
+find_package(pybind11 2.6 REQUIRED)
 
 
 add_library(griffig SHARED src/griffig.cpp)
