--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 project(griffig VERSION 0.0.1 LANGUAGES CXX)
 
 
-set(PYTHON_EXECUTABLE python3.7)
+# set(PYTHON_EXECUTABLE python3.7)
 
 
 find_package(Eigen3 3.3.7 REQUIRED NO_MODULE)
 find_package(OpenCV 4.5 REQUIRED)
 find_package(OpenGL REQUIRED)
-find_package(Python 3.7 EXACT REQUIRED COMPONENTS Interpreter Development)
+find_package(Python 3.6 REQUIRED COMPONENTS Interpreter Development)
 find_package(pybind11 2.6 REQUIRED)
 
 
