--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 project(griffig VERSION 0.0.1 LANGUAGES CXX)
 
 
-find_package(OpenCV 3.2 REQUIRED)
+find_package(OpenCV REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(Python 3.6 REQUIRED COMPONENTS Interpreter Development)
 find_package(pybind11 2.6 REQUIRED)
