--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,6 @@ jobs:
     #     make -j2
 
     - name: build Python wheels
-      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
+      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
       with:
         system-packages: 'opencv opencv-devel pybind11 eigen3'
