--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,4 +54,5 @@ jobs:
     - name: build Python wheels
       uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
       with:
-        system-packages: 'opencv opencv-devel pybind11 eigen3'
+        build-requirements: 'pybind11'
+        system-packages: 'opencv opencv-devel eigen3'
