--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,11 @@ jobs:
       with:
         submodules: recursive
 
-    - name: install OpenGL
+    - name: Install OpenGL
       run: |
         sudo apt install libglfw3 libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev python3-numpy
 
-    - name: install Eigen3
+    - name: Install Eigen3
       run: |
         git clone https://github.com/eigenteam/eigen-git-mirror.git
         cd eigen-git-mirror
@@ -25,7 +25,7 @@ jobs:
         cmake ..
         sudo make install
 
-    - name: install pybind11
+    - name: Install pybind11
       run: |
         git clone https://github.com/pybind/pybind11.git
         cd pybind11
@@ -35,7 +35,7 @@ jobs:
         make -j2
         sudo make install
 
-    - name: install OpenCV
+    - name: Install OpenCV
       run: |
         git clone https://github.com/opencv/opencv.git
         cd opencv
@@ -45,14 +45,14 @@ jobs:
         make -j2
         sudo make install
 
-    - name: configure & make
+    - name: Configure and build
       run: |
         python3 setup.py bdist_wheel
     #    mkdir build && cd build
     #    cmake ..
     #    make -j2
 
-    # - name: build Python wheels
+    # - name: Build Python wheels
     #   uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
     #   with:
     #     build-requirements: 'pybind11'
