--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.12)
+
+
 project(griffig VERSION 0.0.1 LANGUAGES CXX)
 
 
-find_package(OpenCV REQUIRED)
-find_package(OpenGL REQUIRED)
+find_package(OpenCV REQUIRED COMPONENTS core imgproc)
+find_package(OpenGL REQUIRED COMPONENTS OpenGL EGL)
+find_package(GLEW REQUIRED)
 find_package(Python 3.6 REQUIRED COMPONENTS Interpreter Development)
 find_package(pybind11 2.6 REQUIRED)
 
@@ -13,8 +16,8 @@ add_subdirectory(affx)
 
 add_library(griffig src/griffig.cpp)
 target_compile_features(griffig PUBLIC cxx_std_17)
-target_include_directories(griffig PUBLIC ${GLFW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} include)
-target_link_libraries(griffig PUBLIC affx glfw ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${OpenCV_LIBS})
+target_include_directories(griffig PUBLIC include)
+target_link_libraries(griffig PUBLIC affx glfw opencv_core opencv_imgproc OpenGL::OpenGL OpenGL::EGL OpenGL::GLU GLEW::GLEW)
 
 
 pybind11_add_module(_griffig src/python.cpp)
