--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Install OpenGL
       run: |
-        sudo apt install libglfw3 libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev python3-numpy
+        sudo apt install -y libgl1-mesa-dev libglu1-mesa-dev libglew-dev python3-numpy
 
     - name: Install Eigen3
       run: |
