--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_subdirectory(affx)
 add_library(griffig src/griffig.cpp)
 target_compile_features(griffig PUBLIC cxx_std_17)
 target_include_directories(griffig PUBLIC include)
-target_link_libraries(griffig PUBLIC affx opencv_core opencv_imgproc OpenGL::OpenGL OpenGL::EGL OpenGL::GLU GLEW::GLEW)
+target_link_libraries(griffig PUBLIC affx opencv_core opencv_imgproc OpenGL::OpenGL OpenGL::EGL OpenGL::GLU GLEW::GLEW pybind11::embed)
 
 
 pybind11_add_module(_griffig src/python.cpp)
