use griffig.xyz/base for ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,44 +6,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    container:
+      image: griffig.xyz/base
+      credentials:
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+
     steps:
     - name: Checkout repository and submodules
       uses: actions/checkout@v2
       with:
         submodules: recursive
-
-    - name: Install OpenGL
-      run: |
-        sudo apt install -y libgl1-mesa-dev libglu1-mesa-dev libglew-dev python3-numpy
-
-    - name: Install Eigen3
-      run: |
-        git clone https://github.com/eigenteam/eigen-git-mirror.git
-        cd eigen-git-mirror
-        git checkout 3.3.7
-        mkdir build && cd build
-        cmake ..
-        sudo make install
-
-    - name: Install pybind11
-      run: |
-        git clone https://github.com/pybind/pybind11.git
-        cd pybind11
-        git checkout v2.6.2
-        mkdir build && cd build
-        cmake -DPYBIND11_TEST=OFF ..
-        make -j2
-        sudo make install
-
-    - name: Install OpenCV
-      run: |
-        git clone https://github.com/opencv/opencv.git
-        cd opencv
-        git checkout 4.5.0
-        mkdir build && cd build
-        cmake -DWITH_VTK=OFF -DWITH_GTK=OFF -DWITH_PROTOBUF=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_opencv_gapi=OFF -DBUILD_opencv_java=OFF -DBUILD_opencv_video=OFF -DBUILD_opencv_videoio=OFF -DBUILD_opencv_dnn=OFF -DBUILD_opencv_features2d=OFF -DBUILD_opencv_ml=OFF -DBUILD_opencv_flann=OFF -DBUILD_opencv_objdetect=OFF -DBUILD_TESTS=OFF -DWITH_WEBP=OFF ..
-        make -j2
-        sudo make install
 
     - name: Configure and build
       run: |
