--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Configure and build
       run: |
-        python3 setup.py bdist_wheel
+        pip install .
 
     # - name: Build Python wheels
     #   uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
