--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Configure and build
+    - name: Build and test
       run: |
         pip install .
-
-    # - name: Build Python wheels
-    #   uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
-    #   with:
-    #     build-requirements: 'pybind11'
-    #     system-packages: 'opencv opencv-devel eigen3'
+        python3 test/test_box.py
