--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
         build-requirements: 'cmake'
-        system-packages: 'python3-numpy libgl1-mesa-dev libglu1-mesa-dev libgles2-mesa-dev libglew-dev libeigen3-dev'
+        system-packages: 'mesa-libGL-devel mesa-libGLU-devel mesa-libEGL-devel glew-devel eigen3-devel'
         pre-build-command: 'sh .github/workflows/install-base.sh'
 
     - name: Build and publish
