--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,8 +25,7 @@ jobs:
       uses: RalfG/python-wheels-manylinux-build@v0.3.4
       with:
         python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-        build-requirements: 'cmake'
-        system-packages: 'mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel eigen3-devel'
+        system-packages: 'cmake mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel eigen3-devel'
         pre-build-command: 'sh .github/workflows/install-base.sh'
 
     - name: Build and publish
