--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.12)
 project(griffig VERSION 0.0.1 LANGUAGES CXX)
 
 
-find_package(OpenGL REQUIRED COMPONENTS OpenGL EGL)
+find_package(OpenGL REQUIRED COMPONENTS EGL)
 find_package(GLEW REQUIRED)
 find_package(OpenCV REQUIRED COMPONENTS core imgproc)
 find_package(pybind11 2.6 REQUIRED)
@@ -16,7 +16,7 @@ add_subdirectory(affx)
 add_library(griffig src/griffig.cpp)
 target_compile_features(griffig PUBLIC cxx_std_17)
 target_include_directories(griffig PUBLIC include)
-target_link_libraries(griffig PUBLIC affx opencv_core opencv_imgproc OpenGL::OpenGL OpenGL::EGL OpenGL::GLU GLEW::GLEW pybind11::embed)
+target_link_libraries(griffig PUBLIC affx opencv_core opencv_imgproc OpenGL::EGL OpenGL::GLU GLEW::GLEW pybind11::embed)
 
 
 pybind11_add_module(_griffig src/python.cpp)
