--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       uses: RalfG/python-wheels-manylinux-build@v0.3.4
       with:
         python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-        # build-requirements: 'numpy'
+        build-requirements: 'numpy'
         system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
         pre-build-command: 'sh .github/workflows/install-base.sh'
 
