--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,20 +22,19 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine cibuildwheel --upgrade
 
-    # - name: Build manylinux wheels
-    #   uses: RalfG/python-wheels-manylinux-build@v0.3.4
-    #   with:
-    #     python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-    #     build-requirements: 'numpy'
-    #     system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
-    #     pre-build-command: 'sh .github/workflows/install-base.sh'
+    - name: Build manylinux wheels
+      uses: RalfG/python-wheels-manylinux-build@v0.3.4
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+        build-requirements: 'numpy'
+        system-packages: 'libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
+        pre-build-command: 'sh .github/workflows/install-base.sh'
 
-    - name: Build wheels
-      env:
-        CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
-        # CIBW_BEFORE_BUILD: sh .github/workflows/install-base.sh
-      run: |
-        python -m cibuildwheel --output-dir dist
+    # - name: Build wheels
+    #   env:
+    #     CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
+    #   run: |
+    #     python -m cibuildwheel --output-dir dist
 
     - name: Publish
       env:
