--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine cibuildwheel --upgrade
+        pip install setuptools wheel twine --upgrade
 
     - name: Build manylinux wheels
       uses: RalfG/python-wheels-manylinux-build@v0.3.4
@@ -29,12 +29,6 @@ jobs:
         build-requirements: 'numpy'
         system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
         pre-build-command: 'sh .github/workflows/install-base.sh'
-
-    # - name: Build wheels
-    #   env:
-    #     CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
-    #   run: |
-    #     python -m cibuildwheel --output-dir dist
 
     - name: Publish
       env:
