--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,22 +19,23 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine --upgrade
+        python3 -m pip install --upgrade pip
+        python3 -m pip install setuptools wheel twine --upgrade
+        mkdir dist
 
-    - name: Build manylinux wheels
-      uses: RalfG/python-wheels-manylinux-build@v0.3.4
-      with:
-        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-        build-requirements: 'numpy'
-        system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
-        pre-build-command: 'sh .github/workflows/install-base.sh'
+    # - name: Build manylinux wheels
+    #   uses: RalfG/python-wheels-manylinux-build@v0.3.4
+    #   with:
+    #     python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+    #     build-requirements: 'numpy'
+    #     system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
+    #     pre-build-command: 'sh .github/workflows/install-base.sh'
 
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist
-        twine upload dist/*
-        twine upload wheelhouse/*-manylinux*.whl
+        python3 setup.py sdist
+    #    twine upload dist/*
+    #    twine upload wheelhouse/*-manylinux*.whl
