--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,12 @@ find_package(Eigen3 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenCV REQUIRED COMPONENTS core imgproc)
 find_package(OpenGL REQUIRED COMPONENTS EGL)
-find_package(pybind11 2.6 REQUIRED)
+
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/pybind11)
+    add_subdirectory(pybind11)
+else()
+    find_package(pybind11 2.6 REQUIRED)
+endif()
 
 
 add_subdirectory(affx)
