--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project(griffig VERSION 0.0.1 LANGUAGES CXX)
 set(PYTHON3_VERSION "" CACHE STRING "Python Version")
 
 
-if (PYTHON3_VERSION)
+if(PYTHON3_VERSION)
     find_package(Python3 ${PYTHON3_VERSION} EXACT REQUIRED COMPONENTS NumPy)
 else()
     find_package(Python3 REQUIRED COMPONENTS NumPy)
@@ -20,7 +20,6 @@ else()
 endif()
 
 find_package(Eigen3 REQUIRED)
-find_package(GLEW REQUIRED)
 find_package(OpenCV REQUIRED COMPONENTS core imgproc)
 find_package(OpenGL REQUIRED COMPONENTS EGL)
 
@@ -31,7 +30,7 @@ add_subdirectory(affx)
 add_library(griffig src/griffig.cpp)
 target_compile_features(griffig PUBLIC cxx_std_17)
 target_include_directories(griffig PUBLIC include)
-target_link_libraries(griffig PUBLIC affx opencv_core opencv_imgproc OpenGL::EGL OpenGL::GLU GLEW::GLEW pybind11::embed Python3::NumPy)
+target_link_libraries(griffig PUBLIC affx opencv_core opencv_imgproc OpenGL::EGL OpenGL::GLU pybind11::embed Python3::NumPy)
 
 
 pybind11_add_module(_griffig src/python.cpp)
