build only per source

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,13 +26,13 @@ jobs:
       run: |
         python3 setup.py sdist
 
-    - name: Build manylinux wheels
-      uses: RalfG/python-wheels-manylinux-build@v0.3.4
-      with:
-        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-        build-requirements: 'numpy'
-        system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
-        pre-build-command: 'sh .github/workflows/install-base.sh'
+    # - name: Build manylinux wheels
+    #   uses: RalfG/python-wheels-manylinux-build@v0.3.4
+    #   with:
+    #     python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+    #     build-requirements: 'numpy'
+    #     system-packages: 'cmake libglvnd-opengl mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel mesa-libEGL mesa-libEGL-devel glew glew-devel'
+    #     pre-build-command: 'sh .github/workflows/install-base.sh'
 
     - name: Publish
       env:
@@ -40,4 +40,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         twine upload dist/*.tar.gz
-        twine upload dist/*-manylinux*.whl
+    #    twine upload dist/*-manylinux*.whl
