--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,25 +4,26 @@ cmake_minimum_required(VERSION 3.14)
 project(griffig VERSION 0.0.1 LANGUAGES CXX)
 
 
-set(PYTHON3_VERSION "" CACHE STRING "Python Version")
-
-
-if(PYTHON3_VERSION)
-    find_package(Python3 ${PYTHON3_VERSION} EXACT REQUIRED COMPONENTS NumPy)
-else()
-    find_package(Python3 REQUIRED COMPONENTS NumPy)
-endif()
-
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/pybind11)
-    add_subdirectory(pybind11)
-else()
-    find_package(pybind11 2.6 REQUIRED)
-endif()
-
 find_package(Eigen3 REQUIRED)
 find_package(GLEW REQUIRED)
-find_package(OpenCV REQUIRED COMPONENTS core imgproc)
 find_package(OpenGL REQUIRED COMPONENTS EGL)
+find_package(Python3 REQUIRED COMPONENTS NumPy)
+
+find_package(Eigen3)
+if(NOT Eigen3_FOUND)
+    add_subdirectory(eigen)
+endif()
+
+find_package(pybind11 2.6)
+if(NOT pybind11_FOUND)
+    add_subdirectory(pybind11)
+endif()
+
+find_package(OpenCV COMPONENTS core imgproc)
+if(NOT OpenCV_FOUND)
+    add_subdirectory(opencv)
+endif()
+
 
 
 add_subdirectory(affx)
