--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: Upload Python Package
 
-on:
-  release:
-    types: [created]
+on: [push, pull_request]
+# on:
+#   release:
+#     types: [created]
 
 jobs:
   deploy:
