--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
 
 
-project(griffig VERSION 0.0.8 LANGUAGES CXX)
+project(griffig VERSION 0.0.9 LANGUAGES CXX)
 include(FetchContent)
+
+
+option(USE_INTERNAL_PYBIND11 "Build python module" OFF)
 
 
 find_package(Eigen3 REQUIRED)
@@ -10,7 +13,15 @@ find_package(GLEW REQUIRED)
 find_package(OpenCV REQUIRED COMPONENTS core imgproc)
 find_package(OpenGL REQUIRED COMPONENTS EGL)
 find_package(Python3 REQUIRED COMPONENTS NumPy)
-find_package(pybind11 REQUIRED)
+
+
+if(USE_INTERNAL_PYBIND11)
+    FetchContent_Declare(pybind11_fetch GIT_REPOSITORY https://github.com/pybind/pybind11.git GIT_TAG v2.6.2)
+    FetchContent_MakeAvailable(pybind11_fetch)
+    add_library(pybind11 ALIAS pybind11_fetch)
+else()
+    find_package(pybind11 REQUIRED)
+endif()
 
 
 add_subdirectory(affx)
